2009-11-10  Matthias Wimmer  <m@tthias.eu>
    * jsm/jsm.cc: porting changes in 1.6.x branch to trunk
    * jabberd/jabberd.h: same
    * jabberd/mio_xml.cc: same
    * jabberd/config.cc: same
    * jabberd/mio_tls.cc: same
    * jabberd/xdb.cc: same
    * jabberd/lib/str.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jutil.cc: same
    * jabberd/mio.cc: same
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/deliver.cc: same

2009-03-17  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberdlib.h: fixing includes (by Robin Redeker)

2009-03-16  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/lwresc.cc: work in progress on the new resolver
    * jabberd/lib/jabberdlib.h: same
    * jabberd/deliver.cc: same
    * resolver/resolver_job.cc: same
    * resolver/resend_service.cc: same
    * resolver/resolver.cc: same
    * resolver/resolver.h: same
    * resolver/Makefile.am: same

2008-09-09  Matthias Wimmer  <m@tthias.eu>

    * resolver/resolver.cc: started work on lwresd client resolver
    * resolver/resolver.h: same
    * jabberd/jabberd.h: same
    * jabberd/instance_base.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/socket.cc: same
    * jabberd/mio_xml.cc: sanity change
    * jabberd/lib/lwresc.cc: fix in reading uint16_t

2008-09-08  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_roster.cc: fix duplicate roster item problem
    * jabberd/lib/jabberdlib.h: better handling of new session control
    * jabberd/deliver.cc: same
    * jabberd/xdb.cc: fix problem with fixed puffer for printing integer
    	(problem reported by Vince Negri)

2008-09-07  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberid.cc: fix UTF-8 handling in JabberIDs
    * jsm/modules/mod_roster.cc: start fixing duplicate roster item problem
    * jabberd/jabberd.h: fixing problem with dynamic routing
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same