@@ -401,6 +401,7 @@
       <!-- comment out or remove the following setting.			-->
       <presence>
 	<presence2xdb/>
+	<peerpresence2xdb/>
       </presence>
 
       <!-- The <history/> configuration element can be used to instruct	-->
@@ -596,6 +597,14 @@
 	</get>
 	<set>INSERT INTO messages (user, realm, correspondent, type, storetime, delivertime, subject, body, xml) VALUES (SUBSTRING('{attribute::to}', 1, INSTR('{attribute::to}', '@')-1), SUBSTRING('{attribute::to}', INSTR('{attribute::to}', '@')+1), IF ('{message/attribute::direction}'='sent', SUBSTRING('{message/attribute::to}/', 1, INSTR('{message/attribute::to}/', '/')-1), SUBSTRING('{message/attribute::from}/', 1, INSTR('{message/attribute::from}/', '/')-1)), IF ('{message/attribute::direction}'='sent', 'sent', 'recv'), now(), IF ('{message/attribute::direction}'='sent', NULL, now()), '{message/subject/text()}', '{message/body/text()}', '{message}')</set>
 	<delete>DELETE FROM messages WHERE realm=SUBSTRING('{attribute::to}', INSTR('{attribute::to}', '@')+1) AND user=SUBSTRING('{attribute::to}', 1, INSTR('{attribute::to}', '@')-1)</delete>
+      </handler>
+      <handler ns='http://jabberd.org/ns/storedpeerpresence'>
+        <get>
+          <query>SELECT xml FROM peerpresence WHERE realm=SUBSTRING('{attribute::to}', INSTR('{attribute::to}', '@')+1) AND user=SUBSTRING('{attribute::to}', 1, INSTR('{attribute::to}', '@')-1) ORDER BY peerrealm, peeruser, peerresource</query>
+          <result group='foo'><value xmlns='http://jabberd.org/ns/xdbsql' value='1' parsed='parsed'/></result>
+	</get>
+	<set>INSERT INTO peerpresence (user, realm, peeruser, peerrealm, peerresource, presence, priority, status, timestamp, xml) VALUES (SUBSTRING('{attribute::to}', 1, INSTR('{attribute::to}', '@')-1), SUBSTRING('{attribute::to}', INSTR('{attribute::to}', '@')+1), SUBSTRING('{presence/attribute::from}', 1, INSTR('{presence/attribute::from}', '@')-1), IF(INSTR('{presence/attribute::from}', '/')=0, SUBSTRING('{presence/attribute::from}', INSTR('{presence/attribute::from}', '@')+1), SUBSTRING('{presence/attribute::from}', INSTR('{presence/attribute::from}', '@')+1, INSTR('{presence/attribute::from}', '/')-1-INSTR('{presence/attribute::from}', '@'))), IF(INSTR('{presence/attribute::from}', '/')=0, NULL, SUBSTRING('{presence/attribute::from}', INSTR('{presence/attribute::from}', '/')+1)), IF ('{presence}'='','unavailable', IF ('{presence/attribute::type}'='unavailable', 'unavailable', IF ('{presence/show/text()}'='','available', '{presence/show/text()}'))), IF ('{presence/priority/text()}'='', '0', '{presence/priority/text()}'), '{presence/status/text()}', now(), '{presence}')</set>
+	<delete>DELETE FROM peerpresence WHERE realm=SUBSTRING('{attribute::to}', INSTR('{attribute::to}', '@')+1) AND user=SUBSTRING('{attribute::to}', 1, INSTR('{attribute::to}', '@')-1) AND IF ('{attribute::matchpath}'='', 1=1, CONCAT(peeruser, '@', peerrealm, IF(peerresource IS NULL, '', CONCAT('/', peerresource)))=SUBSTRING(SUBSTRING('{attribute::matchpath}', 1, LENGTH('{attribute::matchpath}')-2), 17) AND SUBSTRING('{attribute::matchpath}', 1, 15)='presence[@from=')</delete>
       </handler>
       <handler ns="http://jabberd.org/ns/storedpresence">
         <get>
